# django-attachments

./: .coveragerc  .env  .gitignore  .python-version  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  runtests.py  runtests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: testing.yml
attachments/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
attachments/locale/: README.transifex
attachments/locale/da/LC_MESSAGES/: django.mo  django.po
attachments/locale/de/LC_MESSAGES/: django.mo  django.po
attachments/locale/en/LC_MESSAGES/: django.mo  django.po
attachments/locale/es_AR/LC_MESSAGES/: django.mo  django.po
attachments/locale/fi/LC_MESSAGES/: django.mo  django.po
attachments/locale/fr/LC_MESSAGES/: django.mo  django.po
attachments/locale/gr/LC_MESSAGES/: django.mo  django.po
attachments/locale/it/LC_MESSAGES/: django.mo  django.po
attachments/locale/pt-br/LC_MESSAGES/: django.po
attachments/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
attachments/locale/ru/LC_MESSAGES/: django.mo  django.po
attachments/management/commands/: delete_stale_attachments.py
attachments/migrations/: 0001_initial.py  0002_auto_20161020_1618.py  0002_auto_20180104_1247.py  0002_update_meta_options.py  0003_auto_20161020_1621.py  0003_auto_20190722_1216.py  0004_db_index.py  0005_object_id_charfield.py
attachments/templates/attachments/: add.html  add_form.html  delete_link.html
attachments/templatetags/: attachments_tags.py
attachments/tests/: __init__.py  base.py  models.py  test_integrity.py  test_model.py  test_template.py  test_views.py
attachments/tests/MyTestProject/: models.py
attachments/tests/testapp/: admin.py  apps.py  models.py  settings.py  urls.py
attachments/tests/testapp/migrations/: 0001_initial.py  0002_auto_20180104_1247.py  0003_model_with_uuid_pk.py
attachments/tests/testapp/templates/: testmodel_detail.html
