[metadata]
name = django-attachments
version = 1.3.1
description = django-attachments is generic Django application to attach '
        'Files (Attachments) to any model.
long_description = file: README.rst, CHANGELOG.rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/django-attachments
keywords = django, attachments, files, upload
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=1.8
    six
    mock; python_version<"3"

[isort]
default_section = THIRDPARTY
known_first_party = attachments
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = migrations

[coverage:run]
source = attachments
branch = True
omit =
    attachments/migrations/*
    attachments/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/attachments
