[metadata]
name = django-attachments
version = 1.5
description = django-attachments is generic Django application to attach Files (Attachments) to any model.
long_description = file: README.rst, CHANGELOG.rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/django-attachments
keywords = django, attachments, files, upload
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=1.11
    six
    mock

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-django
    pytest-flakes

[isort]
known_first_party = attachments
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 0
skip = migrations

[coverage:run]
source = attachments
branch = True
omit =
    attachments/migrations/*
    attachments/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/attachments

[tool:pytest]
python_files = tests.py test_*.py *_tests.py
addopts =
    --ds=attachments.tests.testapp.settings
    --cov=./attachments
    --cov-append
    --cov-branch
    --cov-report=
    --nomigrations
    --reuse-db
    --flakes
